--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>399</width>
     <height>300</height>
    </rect>
   </property>
@@ -31,8 +31,8 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>10</y>
-      <width>161</width>
+      <y>30</y>
+      <width>131</width>
       <height>23</height>
      </rect>
     </property>
@@ -56,10 +56,62 @@
     <property name="geometry">
      <rect>
       <x>29</x>
-      <y>49</y>
+      <y>69</y>
       <width>341</width>
-      <height>171</height>
+      <height>151</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="DistributionLabel">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>10</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Distribution:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="SampleSizeLabel">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>10</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sample size:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="StopButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>80</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Stop</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="sampleSizeBox">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>30</y>
+      <width>101</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>100</string>
     </property>
    </widget>
   </widget>
@@ -68,7 +120,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>399</width>
      <height>20</height>
     </rect>
    </property>
