--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>399</width>
-    <height>300</height>
+    <width>575</width>
+    <height>447</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="StartButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>10</y>
-      <width>80</width>
+      <width>71</width>
       <height>23</height>
      </rect>
     </property>
@@ -30,15 +30,20 @@
    <widget class="QComboBox" name="DistributionComboBox">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>30</y>
-      <width>131</width>
+      <x>10</x>
+      <y>60</y>
+      <width>151</width>
       <height>23</height>
      </rect>
     </property>
     <item>
      <property name="text">
-      <string>distribution 1</string>
+      <string>select</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>normal distribution</string>
      </property>
     </item>
     <item>
@@ -55,19 +60,19 @@
    <widget class="QWidget" name="HistogramWidget" native="true">
     <property name="geometry">
      <rect>
-      <x>29</x>
-      <y>69</y>
-      <width>341</width>
-      <height>151</height>
+      <x>180</x>
+      <y>10</y>
+      <width>371</width>
+      <height>231</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="DistributionLabel">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>10</y>
-      <width>71</width>
+      <x>10</x>
+      <y>40</y>
+      <width>81</width>
       <height>16</height>
      </rect>
     </property>
@@ -78,9 +83,9 @@
    <widget class="QLabel" name="SampleSizeLabel">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>10</y>
-      <width>71</width>
+      <x>10</x>
+      <y>90</y>
+      <width>81</width>
       <height>16</height>
      </rect>
     </property>
@@ -91,9 +96,9 @@
    <widget class="QPushButton" name="StopButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>30</y>
-      <width>80</width>
+      <x>90</x>
+      <y>10</y>
+      <width>71</width>
       <height>23</height>
      </rect>
     </property>
@@ -101,17 +106,91 @@
      <string>Stop</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="sampleSizeBox">
+   <widget class="QLineEdit" name="SampleSizeBox">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>30</y>
-      <width>101</width>
+      <x>10</x>
+      <y>110</y>
+      <width>151</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>100</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ParametersLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>140</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Parameters:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Parameter1Name">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>160</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Parameter2Name">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>190</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="Parameter1Value">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>160</y>
+      <width>101</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="Parameter2Value">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>190</y>
+      <width>101</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
@@ -120,7 +199,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>399</width>
+     <width>575</width>
      <height>20</height>
     </rect>
    </property>
