--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,7 +57,7 @@
      </property>
     </item>
    </widget>
-   <widget class="QWidget" name="HistogramWidget" native="true">
+   <widget class="QCustomPlot" name="HistogramWidget" native="true">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -215,6 +215,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
